improved mobile styles

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ main {
   position: relative;
 }
 
+input, button {
+  font-size: 16px;
+}
+
 #self-view-video, #self-view-canvas {
   width: 100%;
   height: auto;
@@ -42,7 +46,7 @@ input {
   margin-bottom: 20px;
   border: none;
   border: 2px solid #073B4C;
-  width: 189px;
+  width: 200px;
 }
 
 input:focus-visible {
@@ -131,6 +135,7 @@ a {
   top: 20px;
   right: 20px;
   width: 20%;
+  min-width: 200px;
   aspect-ratio: 16/9;
   background-color: #000000;
   display: flex;
